[project]
name = "form-agent"
version = "0.1.0"
description = "Conversational survey AI agent (Agno) that runs a survey via chat TUI and writes responses to Google Sheets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2,<3",
    "sqlalchemy>=2",         # required by Agno's SqliteDb session store
    "openai>=1.40",          # OpenAI-compatible client used by Agno's OpenAILike
    "gspread>=6,<7",
    "google-auth>=2",
    "textual>=3,<9",
    "pydantic>=2",
    "pyyaml>=6",
    "python-dotenv>=1",
]

[project.scripts]
form-agent = "agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
